--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
         <h2 class="header-title">Підбір автозапчастин Японія/Корея</h2>
       </div>
       <div class="header-container">
-        <address>
+        <address class="contacts">
+          <a href="tel:+380992273615" class="contact-number"
+            >+38 (099) 227-36-15</a
+          >
           <a href="tel:+380992273615" class="contact-number"
             >+38 (099) 227-36-15</a
           >
         </address>
-        <button class="telegram">Замовити зворотній виклик</button>
       </div>
     </div>
     <div class="chek-container">
       <nav>
         <ul class="chek-list">
+          <li class="chek-item"><a href="#work-section">Як ми працюємо</a></li>
           <li class="chek-item">
             <a href="#brend">Марки автомобілів</a>
           </li>
@@ -44,14 +47,28 @@
       <section class="hero">
         <div class="hero-content">
           <h1>
-            Набридло гаїти час на пошуки запчастин для свого авто? <br />
-            Звертайся до нас!
+            Підбір запчастин без помилок - ми знаєм, що потрібно троєму авто!
           </h1>
 
           <button class="pulse-color-button">Замовити здвінок</button>
         </div>
         <div class="hero-img">
           <img src="./src/img/bg-hero-car.png" alt="Hero image" />
+        </div>
+      </section>
+      <section class="work-section" id="work-section">
+        <div class="work-img"><img src="./src/img/opis.webp" alt="opis" /></div>
+        <div class="work-content">
+          <h2>Як ми працюємо:</h2>
+          <ol>
+            <li>Тисніть кнопку "Замовити дзінок".</li>
+            <li>Заповнюйте форму</li>
+            <li>
+              Ми підберем всі можливі варіанти від бюджетного до найкращого
+            </li>
+            <li>І скинем Вам в телеграм або вайбер</li>
+          </ol>
+          <p>Або просто наберіть нас за номером 099 227 36 15</p>
         </div>
       </section>
       <section id="brend" class="brend-section">
@@ -146,6 +163,7 @@
           </li>
         </ul>
       </section>
+      <section><p>Акция, (таймер обратного отсчета)</p></section>
       <section id="main" class="main-section">
         <div class="main-img">
           <img
@@ -173,21 +191,10 @@
           </p>
         </div>
       </section>
-
-      <section><p>Акция, (таймер обратного отсчета)</p></section>
-      <section><p>Описание сотрудничества, продукта + бонусы</p></section>
-      <section><p>Продажа цены</p></section>
-      <section><p>Как окупятся результаты</p></section>
+      <section><p>Бренди</p></section>
+      <section><p>Доставка і оплата</p></section>
+      <section><p>Гарантія і повернення</p></section>
       <section><p>Отзывы</p></section>
-      <section><p>Отзывыыыыыыыыыыыыыыы</p></section>
-      <section>
-        <p>
-          Решение и доказательство того, как изменится жизнь клиента после ее
-          решения
-        </p>
-      </section>
-      <section><p>Мотивация</p></section>
-
       <script type="module" src="/src/main.js"></script>
     </main>
   </body>
