--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             Підбір запчастин без помилок - ми знаєм, що потрібно троєму авто!
           </h1>
 
-          <button class="pulse-color-button">Замовити здвінок</button>
+          <button class="pulse-color-button">Написати в телеграм</button>
         </div>
         <div class="hero-img">
           <img src="./src/img/bg-hero-car.png" alt="Hero image" />
