--- a/index.html
+++ b/index.html
@@ -108,18 +108,9 @@
   </header>
   <body>
     <main>
-      <!-- <section class="hero">
-        <div class="hero-content">
-          <h1>
-            Підбір запчастин без помилок - ми знаєм, що потрібно троєму авто!
-          </h1>
-
-          <button class="pulse-color-button">Написати в телеграм</button>
-        </div>
-        <div class="hero-img">
-          <img src="./src/img/bg-hero-car.png" alt="Hero image" />
-        </div>
-      </section> -->
+      <section class="hero">
+        <img src="./src/img/main-photo.jpeg" alt="main-photo" />
+      </section>
       <section class="work-section" id="work-section">
         <div class="work-img"><img src="./src/img/opis.webp" alt="opis" /></div>
         <div class="work-content">
