--- a/index.html
+++ b/index.html
@@ -116,100 +116,299 @@
           </h1>
         </div>
       </section>
+      <section class="work-section">
+        <h2 class="work-title">Як ми працюємо:</h2>
+        <div>
+          <ul class="work-list">
+            <li class="work-item">
+              <div class="work-card">
+                <h4 class="card-title">Підбір</h4>
+                <ul class="work-features">
+                  <li>
+                    <svg
+                      viewBox="0 0 24 24"
+                      width="20"
+                      height="20"
+                      fill="#27ae60"
+                    >
+                      <path
+                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                      />
+                    </svg>
+                    Точний підбір за VIN-кодом
+                  </li>
+                  <li>
+                    <svg
+                      viewBox="0 0 24 24"
+                      width="20"
+                      height="20"
+                      fill="#27ae60"
+                    >
+                      <path
+                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                      />
+                    </svg>
+                    Оригінали та якісні аналоги
+                  </li>
+                  <li>
+                    <svg
+                      viewBox="0 0 24 24"
+                      width="20"
+                      height="20"
+                      fill="#27ae60"
+                    >
+                      <path
+                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                      />
+                    </svg>
+                    Консультація автоексперта
+                  </li>
+                  <li>
+                    <svg
+                      viewBox="0 0 24 24"
+                      width="20"
+                      height="20"
+                      fill="#27ae60"
+                    >
+                      <path
+                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                      />
+                    </svg>
+                    Пошук рідкісних позицій
+                  </li>
+                </ul>
+                <div class="work-time">
+                  <span>⏱ 15-30 хв</span> на підбір варіантів
+                </div>
+              </div>
+            </li>
+            <li class="work-item">
+              <div class="work-card">
+                <h4 class="card-title">Доставка</h4>
+                <div class="work-item-content">
+                  <ul class="work-features">
+                    <li>
+                      <svg
+                        viewBox="0 0 24 24"
+                        width="20"
+                        height="20"
+                        fill="#27ae60"
+                      >
+                        <path
+                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                        />
+                      </svg>
+                      З наших складових по Україні
+                    </li>
+                    <li>
+                      <svg
+                        viewBox="0 0 24 24"
+                        width="20"
+                        height="20"
+                        fill="#27ae60"
+                      >
+                        <path
+                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                        />
+                      </svg>
+                      Кур'єрська доставка по Харкову
+                    </li>
+                    <li>
+                      <svg
+                        viewBox="0 0 24 24"
+                        width="20"
+                        height="20"
+                        fill="#27ae60"
+                      >
+                        <path
+                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                        />
+                      </svg>
+                      Можливість самовивозу
+                    </li>
+                    <li>
+                      <svg
+                        viewBox="0 0 24 24"
+                        width="20"
+                        height="20"
+                        fill="#27ae60"
+                      >
+                        <path
+                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                        />
+                      </svg>
+                      Відстеження посилки онлайн
+                    </li>
+                  </ul>
+                  <div class="work-time">
+                    <span>🚚 2-5 днів</span> середній термін доставки
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="work-item">
+              <div class="work-card">
+                <h4 class="card-title">Гарантія</h4>
+                <div class="work-item-content">
+                  <ul class="work-features">
+                    <li>
+                      <svg
+                        viewBox="0 0 24 24"
+                        width="20"
+                        height="20"
+                        fill="#27ae60"
+                      >
+                        <path
+                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                        />
+                      </svg>
+                      Офіційна гарантія від виробників
+                    </li>
+                    <li>
+                      <svg
+                        viewBox="0 0 24 24"
+                        width="20"
+                        height="20"
+                        fill="#27ae60"
+                      >
+                        <path
+                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                        />
+                      </svg>
+                      Повернення/обмін 14 днів
+                    </li>
+                    <li>
+                      <svg
+                        viewBox="0 0 24 24"
+                        width="20"
+                        height="20"
+                        fill="#27ae60"
+                      >
+                        <path
+                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                        />
+                      </svg>
+                      Фото-звіт перед відправкою
+                    </li>
+                    <li>
+                      <svg
+                        viewBox="0 0 24 24"
+                        width="20"
+                        height="20"
+                        fill="#27ae60"
+                      >
+                        <path
+                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
+                        />
+                      </svg>
+                      Тестування критичних вузлів
+                    </li>
+                  </ul>
+                  <div class="work-time">
+                    <span>🛡 12-36 міс.</span> гарантійний термін
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section id="brend" class="brend-section">
-        <div class="container">
-          <h2 class="brend-title">
-            Бренди запчастин. Список виробників -AUTOLINE- Харків
-          </h2>
-
-          <div class="infinite-carousel">
-            <div class="carousel-track">
-              <img src="./src/img/logo/acura-1s.jpg" alt="acura" />
-              <img src="./src/img/logo/daewoo.jpg" alt="daewoo" />
-              <img src="./src/img/logo/daihatsu.jpg" alt="daihatsu" />
-              <img src="./src/img/logo/honda-1s.jpg" alt="honda" />
-              <img src="./src/img/logo/hyundai-1s.jpg" alt="hyundai" />
-              <img src="./src/img/logo/mazda-5s.jpg" alt="mazda" />
-              <img src="./src/img/logo/mitsubishi-1s.jpg" alt="mitsubishi" />
-              <img src="./src/img/logo/nissan-2s.jpg" alt="nissan" />
-              <img src="./src/img/logo/ssangyong.jpg" alt="ssangyong" />
-              <img src="./src/img/logo/subaru-logo-1_cr.jpg" alt="subaru" />
-              <img src="./src/img/logo/suzuki-1s.jpg" alt="suzuki" />
-              <img src="./src/img/logo/toyota-1s.jpg" alt="toyota" />
-            </div>
+        <h2 class="brend-title">
+          Запчастини всіх марок корейських та японських автомобілів:
+        </h2>
+        <div class="infinite-carousel">
+          <div class="carousel-track">
+            <img src="./src/img/logo/acura-1s.jpg" alt="acura" />
+            <img src="./src/img/logo/daewoo.jpg" alt="daewoo" />
+            <img src="./src/img/logo/daihatsu.jpg" alt="daihatsu" />
+            <img src="./src/img/logo/honda-1s.jpg" alt="honda" />
+            <img src="./src/img/logo/hyundai-1s.jpg" alt="hyundai" />
+            <img src="./src/img/logo/mazda-5s.jpg" alt="mazda" />
+            <img src="./src/img/logo/mitsubishi-1s.jpg" alt="mitsubishi" />
+            <img src="./src/img/logo/nissan-2s.jpg" alt="nissan" />
+            <img src="./src/img/logo/ssangyong.jpg" alt="ssangyong" />
+            <img src="./src/img/logo/subaru-logo-1_cr.jpg" alt="subaru" />
+            <img src="./src/img/logo/suzuki-1s.jpg" alt="suzuki" />
+            <img src="./src/img/logo/toyota-1s.jpg" alt="toyota" />
           </div>
         </div>
       </section>
       <section id="parts" class="parts-section">
-        <h2 class="parts-title">Підбір запчастин по категоріям в Україні</h2>
-        <ul class="card-list">
-          <li class="card-item">
-            <img
-              class="card-image"
-              src="./src/img/png/dvigatel.png"
-              alt="dvigatel"
-            />
-            <h4 class="card-text">Двигун і система вихлопу</h4>
-          </li>
-          <li class="card-item">
-            <img
-              class="card-image"
-              src="./src/img/png/korobka.png"
-              alt="korobka"
-            />
-            <h4 class="card-text">Коробка передач</h4>
-          </li>
-          <li class="card-item">
-            <img class="card-image" src="./src/img/png/kuzov.png" alt="kuzov" />
-            <h4 class="card-text">Кузовні деталі</h4>
-          </li>
-          <li class="card-item">
-            <img
-              class="card-image"
-              src="./src/img/png/torm.png"
-              alt="tormiznie"
-            />
-            <h4 class="card-text">Гальмівна система</h4>
-          </li>
-          <li class="card-item">
-            <img
-              class="card-image"
-              src="./src/img/png/podv.png"
-              alt="podveska"
-            />
-            <h4 class="card-text">Підвіска та рульове</h4>
-          </li>
-          <li class="card-item">
-            <img
-              class="card-image"
-              src="./src/img/png/hover.png"
-              alt="elektrika"
-            />
-            <h4 class="card-text">Електрика та освітлення</h4>
-          </li>
-          <li class="card-item">
-            <img
-              class="card-image"
-              src="./src/img/png/ohlagd.png"
-              alt="ohlagdenie"
-            />
-            <h4 class="card-text">Охолодження та опалення</h4>
-          </li>
-          <li class="card-item">
-            <img
-              class="card-image"
-              src="./src/img/png/zidkosti.png"
-              alt="zidkosti"
-            />
-            <h4 class="card-text">Автомобільні рідини та олії</h4>
-          </li>
-          <li class="card-item">
-            <img class="card-image" src="./src/img/png/to.png" alt="to" />
-            <h4 class="card-text">Запчастини для ТО</h4>
-          </li>
-        </ul>
+        <div>
+          <h2 class="parts-title">Всі типи запчастин:</h2>
+          <ul class="card-list">
+            <li class="card-item">
+              <img
+                class="card-image"
+                src="./src/img/png/dvigatel.png"
+                alt="dvigatel"
+              />
+              <h4 class="card-text">Двигун і система вихлопу</h4>
+            </li>
+            <li class="card-item">
+              <img
+                class="card-image"
+                src="./src/img/png/korobka.png"
+                alt="korobka"
+              />
+              <h4 class="card-text">Коробка передач</h4>
+            </li>
+            <li class="card-item">
+              <img
+                class="card-image"
+                src="./src/img/png/kuzov.png"
+                alt="kuzov"
+              />
+              <h4 class="card-text">Кузовні деталі</h4>
+            </li>
+            <li class="card-item">
+              <img
+                class="card-image"
+                src="./src/img/png/torm.png"
+                alt="tormiznie"
+              />
+              <h4 class="card-text">Гальмівна система</h4>
+            </li>
+            <li class="card-item">
+              <img
+                class="card-image"
+                src="./src/img/png/podv.png"
+                alt="podveska"
+              />
+              <h4 class="card-text">Підвіска та рульове</h4>
+            </li>
+            <li class="card-item">
+              <img
+                class="card-image"
+                src="./src/img/png/hover.png"
+                alt="elektrika"
+              />
+              <h4 class="card-text">Електрика та освітлення</h4>
+            </li>
+            <li class="card-item">
+              <img
+                class="card-image"
+                src="./src/img/png/ohlagd.png"
+                alt="ohlagdenie"
+              />
+              <h4 class="card-text">Охолодження та опалення</h4>
+            </li>
+            <li class="card-item">
+              <img
+                class="card-image"
+                src="./src/img/png/zidkosti.png"
+                alt="zidkosti"
+              />
+              <h4 class="card-text">Автомобільні рідини та олії</h4>
+            </li>
+            <li class="card-item">
+              <img class="card-image" src="./src/img/png/to.png" alt="to" />
+              <h4 class="card-text">Запчастини для ТО</h4>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section><p>Акция, (таймер обратного отсчета)</p></section>
       <section id="main" class="main-section">
         <div class="main-img">
           <img
