--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       </section>
       <section id="brend" class="brend-section">
         <h2 class="brend-title">
-          Запчастини всіх марок корейських та японських автомобілів:
+          Запчастини всіх корейських та японських марок:
         </h2>
         <div class="infinite-carousel">
           <div class="carousel-track">
@@ -341,7 +341,7 @@
             <li class="card-item">
               <img
                 class="card-image"
-                src="./src/img/png/dvigatel.png"
+                src="./src/img/parts/enero.jpg"
                 alt="dvigatel"
               />
               <h4 class="card-text">Двигун і система вихлопу</h4>
@@ -349,7 +349,7 @@
             <li class="card-item">
               <img
                 class="card-image"
-                src="./src/img/png/korobka.png"
+                src="./src/img/parts/pero.jpg"
                 alt="korobka"
               />
               <h4 class="card-text">Коробка передач</h4>
@@ -357,7 +357,7 @@
             <li class="card-item">
               <img
                 class="card-image"
-                src="./src/img/png/kuzov.png"
+                src="./src/img/parts/body.jpg"
                 alt="kuzov"
               />
               <h4 class="card-text">Кузовні деталі</h4>
@@ -365,7 +365,7 @@
             <li class="card-item">
               <img
                 class="card-image"
-                src="./src/img/png/torm.png"
+                src="./src/img/parts/galm.jpg"
                 alt="tormiznie"
               />
               <h4 class="card-text">Гальмівна система</h4>
@@ -373,7 +373,7 @@
             <li class="card-item">
               <img
                 class="card-image"
-                src="./src/img/png/podv.png"
+                src="./src/img/parts/rulo.jpg"
                 alt="podveska"
               />
               <h4 class="card-text">Підвіска та рульове</h4>
@@ -381,7 +381,7 @@
             <li class="card-item">
               <img
                 class="card-image"
-                src="./src/img/png/hover.png"
+                src="./src/img/parts/lampo.jpg"
                 alt="elektrika"
               />
               <h4 class="card-text">Електрика та освітлення</h4>
@@ -389,7 +389,7 @@
             <li class="card-item">
               <img
                 class="card-image"
-                src="./src/img/png/ohlagd.png"
+                src="./src/img/parts/coldo.jpg"
                 alt="ohlagdenie"
               />
               <h4 class="card-text">Охолодження та опалення</h4>
@@ -397,13 +397,17 @@
             <li class="card-item">
               <img
                 class="card-image"
-                src="./src/img/png/zidkosti.png"
+                src="./src/img/parts/oilol.jpg"
                 alt="zidkosti"
               />
               <h4 class="card-text">Автомобільні рідини та олії</h4>
             </li>
             <li class="card-item">
-              <img class="card-image" src="./src/img/png/to.png" alt="to" />
+              <img
+                class="card-image"
+                src="./src/img/parts/tololol.jpg"
+                alt="to"
+              />
               <h4 class="card-text">Запчастини для ТО</h4>
             </li>
           </ul>
@@ -436,7 +440,6 @@
           </p>
         </div>
       </section>
-      <section><p>Бренди</p></section>
       <section><p>Доставка і оплата</p></section>
       <section><p>Гарантія і повернення</p></section>
       <section><p>Отзывы</p></section>
