--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <header>
-    <!-- <div class="top-header" id="home">
-      <h1>
-        <span>Корейські та Японські</span> <br />
-        автозапчастини
-      </h1>
-      <h2>Правильний підбір<br />Доставка<br />Гарантія</h2>
-    </div> -->
-
-    <div class="bott-header">
+    <div class="bott-header" id="to-home">
       <a class="logo" href="./index.html">-AUTOLINE-</a>
       <div class="callback-form">
         <h3>Замовити дзвінок</h3>
@@ -1102,7 +1094,24 @@
                 Ми у Viber
               </a>
             </div>
-            <a href="#home" class="to-home">Піднятися в гору</a>
+            <a href="#to-home" class="to-home">
+              <span class="icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="3"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path d="M18 15l-6-6-6 6" />
+                </svg>
+              </span>
+              <span class="text">Піднятися в гору</span>
+            </a>
           </div>
         </div>
         <div class="middle-footer">
