--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
       <section><p>Доставка і оплата</p></section>
       <section><p>Гарантія і повернення</p></section>
       <section><p>Отзывы</p></section>
-      <script type="module" src="/src/main.js"></script>
+      <script type="module" src="./src/main.js"></script>
     </main>
   </body>
   <footer>
