--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,8 @@
       <section><p>Доставка і оплата</p></section>
       <section><p>Гарантія і повернення</p></section>
       <section><p>Отзывы</p></section>
-      <script type="module" src="/src/js/main.js"></script>
+      <script type="module" src="./src/js/main.js"></script>
+      <script type="module" src="./src/js/header.js"></script>
     </main>
   </body>
   <footer>
@@ -1185,7 +1186,7 @@
                 Ми у Viber
               </a>
             </div>
-            <a href="#to-home" class="to-home">
+            <a href="#to-home #mobileMenu" class="to-home">
               <span class="icon">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
