--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>potapenko</title>
     <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./src/js/header.js" />
+    <link rel="stylesheet" href="./src/js/main.js" />
   </head>
-  <header>
-    <div class="bott-header" id="to-home">
+  <header id="to-home">
+    <div class="bott-header">
       <a class="logo" href="./index.html">-AUTOLINE-</a>
       <div class="callback-form">
         <h3>Замовити дзвінок</h3>
