--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <section class="hero">
         <div class="main-content">
           <h1 class="hero-title">
-            Правильний відбір корейських та японських автозапчастин з гаранією!
+            Правильний підбір корейських та японських автозапчастин з гаранією!
           </h1>
         </div>
       </section>
@@ -396,27 +396,6 @@
               </div>
             </li>
           </ul>
-        </div>
-      </section>
-      <section id="brend" class="brend-section">
-        <h2 class="brend-title">
-          Запчастини всіх корейських та японських марок:
-        </h2>
-        <div class="infinite-carousel">
-          <div class="carousel-track">
-            <img src="./src/img/logo/acura-1s.jpg" alt="acura" />
-            <img src="./src/img/logo/daewoo.jpg" alt="daewoo" />
-            <img src="./src/img/logo/daihatsu.jpg" alt="daihatsu" />
-            <img src="./src/img/logo/honda-1s.jpg" alt="honda" />
-            <img src="./src/img/logo/hyundai-1s.jpg" alt="hyundai" />
-            <img src="./src/img/logo/mazda-5s.jpg" alt="mazda" />
-            <img src="./src/img/logo/mitsubishi-1s.jpg" alt="mitsubishi" />
-            <img src="./src/img/logo/nissan-2s.jpg" alt="nissan" />
-            <img src="./src/img/logo/ssangyong.jpg" alt="ssangyong" />
-            <img src="./src/img/logo/subaru-logo-1_cr.jpg" alt="subaru" />
-            <img src="./src/img/logo/suzuki-1s.jpg" alt="suzuki" />
-            <img src="./src/img/logo/toyota-1s.jpg" alt="toyota" />
-          </div>
         </div>
       </section>
       <section id="parts" class="parts-section">
@@ -1104,23 +1083,105 @@
           <h2 class="main-h2">Про компанію -AUTOLINE-</h2>
           <p class="main-text-content">
             В 2011 году компания Your-car запустила онлайн сервис для комфорта
-            Наших клиентов - теперь можно находясь дома, в дороге или на работе
-            сидя в кресле, подобрать и заказать запчасть необходимую для Вашего
-            авто. <br />
+            Эдик проиши мне текст!!! <br />
 
-            Вы не определились, где заказать запчасти на Ваш автомобиль? <br />
-            Сделайте правильный выбор,как и другие тысячи клиентов Интернет
-            магазина Your car. <br />
-            Мы гарантирует комфорт, качество, надежность, а самое главное
-            доступность цен на весь ассортимент автозапчастей и аксессуаров с
-            доставкой по Харькову и Украине. <br />
-            Доступен самовывоз автозапчастей в пунктах выдачи.
+            Эдик пропиши мне текст!!! <br />
+            Эдик пропиши мне текст!!! <br />
+            Эдик пропиши мне текст!!! <br />
+            Эдик пропиши мне текст!!!
           </p>
         </div>
       </section>
-      <section><p>Доставка і оплата</p></section>
-      <section><p>Гарантія і повернення</p></section>
-      <section><p>Отзывы</p></section>
+      <section id="brend" class="brend-section">
+        <h2 class="parts-title">
+          Запчастини всіх корейських та японських марок:
+        </h2>
+        <div class="infinite-carousel">
+          <div class="carousel-track">
+            <img src="./src/img/logo/acura-1s.jpg" alt="acura" />
+            <img src="./src/img/logo/daewoo.jpg" alt="daewoo" />
+            <img src="./src/img/logo/daihatsu.jpg" alt="daihatsu" />
+            <img src="./src/img/logo/honda-1s.jpg" alt="honda" />
+            <img src="./src/img/logo/hyundai-1s.jpg" alt="hyundai" />
+            <img src="./src/img/logo/mazda-5s.jpg" alt="mazda" />
+            <img src="./src/img/logo/mitsubishi-1s.jpg" alt="mitsubishi" />
+            <img src="./src/img/logo/nissan-2s.jpg" alt="nissan" />
+            <img src="./src/img/logo/ssangyong.jpg" alt="ssangyong" />
+            <img src="./src/img/logo/subaru-logo-1_cr.jpg" alt="subaru" />
+            <img src="./src/img/logo/suzuki-1s.jpg" alt="suzuki" />
+            <img src="./src/img/logo/toyota-1s.jpg" alt="toyota" />
+          </div>
+        </div>
+      </section>
+      <section class="partner-section">
+        <!-- <h2 class="parts-title">Наші партнери:</h2>
+        <p>
+          Одна з переваг роботи з нами - ми надаємо можливість встановити
+          запчастини у наших, перевірених, партнерів!
+        </p> -->
+        <div class="container">
+          <h2 class="section-title">Наші партнери у Харкові</h2>
+          <p class="partners-description">
+            Запчастини, придбані у нас, ви можете встановити у наших перевірених
+            партнерів по всьому Харкову. Ми співпрацюємо тільки з найкращими
+            автосервісами, щоб гарантувати якісний монтаж та обслуговування.
+          </p>
+
+          <div class="partners-grid">
+            <!-- Партнер 1 -->
+            <div class="partner-card">
+              <img
+                src="img/partner1-logo.png"
+                alt="Автосервіс Швидкий Ремонт"
+                class="partner-logo"
+              />
+              <h3>Швидкий Ремонт</h3>
+              <p class="partner-address">вул. Сумська, 12</p>
+              <a href="tel:+380501234567" class="partner-phone"
+                >+38 (050) 123-45-67</a
+              >
+            </div>
+
+            <!-- Партнер 2 -->
+            <div class="partner-card">
+              <img
+                src="img/partner2-logo.png"
+                alt="СТО Корея Авто"
+                class="partner-logo"
+              />
+              <h3>Корея Авто</h3>
+              <p class="partner-address">пр. Науки, 45</p>
+              <a href="tel:+380671234567" class="partner-phone"
+                >+38 (067) 123-45-67</a
+              >
+            </div>
+
+            <!-- Партнер 3 -->
+            <div class="partner-card">
+              <img
+                src="img/partner3-logo.png"
+                alt="Автоцентр Японія"
+                class="partner-logo"
+              />
+              <h3>Автоцентр Японія</h3>
+              <p class="partner-address">вул. Героїв Праці, 7</p>
+              <a href="tel:+380631234567" class="partner-phone"
+                >+38 (063) 123-45-67</a
+              >
+            </div>
+          </div>
+
+          <div class="partners-cta">
+            <p>
+              Не знайшли свій район? Зателефонуйте нам - підкажемо найближчий
+              варіант!
+            </p>
+            <a href="tel:+380992273615" class="cta-button"
+              >+38 (099) 227-36-15</a
+            >
+          </div>
+        </div>
+      </section>
       <script type="module" src="./src/js/main.js"></script>
       <script type="module" src="./src/js/header.js"></script>
     </main>
@@ -1188,7 +1249,7 @@
                 Ми у Viber
               </a>
             </div>
-            <a href="#to-home #mobileMenu" class="to-home">
+            <a href="#" class="to-home" id="back-to-top">
               <span class="icon">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
