--- a/index.html
+++ b/index.html
@@ -180,14 +180,22 @@
 
     <!-- Мобильное меню (скрыто по умолчанию) -->
     <div class="mobile-menu" id="mobileMenu">
+      <div class="mobile-namber">
+        <p>Зв'язок з нами:</p>
+        <address class="contacts">
+          <a href="tel:+380992273615" class="contact-number"
+            >+38 (099) 227-36-15</a
+          >
+        </address>
+      </div>
       <nav class="navigation">
         <ul class="chek-list">
-          <li class="chek-item"><a href="#work-section">Як ми працюємо</a></li>
-          <li class="chek-item"><a href="#brend">Марки автомобілів</a></li>
+          <li class="chek-item"><a href="#work">Як ми працюємо</a></li>
           <li class="chek-item"><a href="#parts">Запчастини</a></li>
           <li class="chek-item"><a href="#main">Про магазин</a></li>
-          <li class="chek-item"><a href="">Доставка і оплата</a></li>
-          <li class="chek-item"><a href="">Гарантія і повернення</a></li>
+          <li class="chek-item"><a href="#brend">Марки автомобілів</a></li>
+          <li class="chek-item"><a href="#partner">Наші партнери</a></li>
+          <li><button class="lang-btn">ua/ru</button></li>
         </ul>
       </nav>
     </div>
@@ -201,7 +209,7 @@
           </h1>
         </div>
       </section>
-      <section class="work-section">
+      <section class="work-section" id="work">
         <h2 class="work-title">Як ми працюємо:</h2>
         <div>
           <ul class="work-list">
@@ -1113,7 +1121,7 @@
           </div>
         </div>
       </section>
-      <section class="partner-section">
+      <section class="partner-section" id="partner">
         <!-- <h2 class="parts-title">Наші партнери:</h2>
         <p>
           Одна з переваг роботи з нами - ми надаємо можливість встановити
