--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
   <header id="to-home">
     <div class="bott-header">
       <a class="logo" href="./index.html">-AUTOLINE-</a>
+      <!-- <div class="callback-form">
+        <h3>Замовити дзвінок</h3>
+        <form id="callbackForm">
+          <input
+            type="tel"
+            id="phoneInput"
+            placeholder="+380 XX XXX XX XX"
+            required
+          />
+          <button type="submit">Залишити номер</button>
+        </form>
+      </div> -->
       <div class="callback-form">
         <h3>Замовити дзвінок</h3>
         <form id="callbackForm">
@@ -23,6 +35,10 @@
           />
           <button type="submit">Залишити номер</button>
         </form>
+        <div
+          id="responseMessage"
+          style="display: none; margin-top: 10px; color: green"
+        ></div>
       </div>
       <div class="contacts-div">
         <div class="main-namber">
