--- a/index.html
+++ b/index.html
@@ -1194,9 +1194,9 @@
         <div class="right-footer">
           <div class="contacts-div-footer">
             <div class="main-namber-footer">
-              <p>Зв'язок з нами:</p>
+              <p class="footer-slogon">Зв'язок з нами:</p>
               <address class="contacts">
-                <a href="tel:+380992273615" class="contact-number"
+                <a href="tel:+380992273615" class="footer-slogon"
                   >+38 (099) 227-36-15</a
                 >
               </address>
@@ -1274,17 +1274,17 @@
         <div class="middle-footer">
           <a class="logo-footer" href="./index.html">-AUTOLINE-</a>
           <h2 class="footer-title">
-            <span>Корейські та Японські</span> <br />
-            автозапчастини
+            Підбір запчастин по VIN <br />
+            за 5 хвилин!
           </h2>
-          <p class="footer-slogon">Ми вирішимо твої проблеми.</p>
+          <p class="footer-slogon">Ваш автомобіль - наші клопоти.</p>
         </div>
         <div class="left-footer">
           <h3 class="title-card">Як нас знайти</h3>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2568.3847620552697!2d36.272624316204734!3d49.929121289392064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41270da4b6664cb3%3A0x5cf2a23cef1978!2z0KHQotCeINCT0JHQng!5e0!3m2!1sru!2sua!4v1746106382093!5m2!1sru!2sua"
-            width="200"
-            height="150"
+            width="300"
+            height="200"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
