--- a/index.html
+++ b/index.html
@@ -244,29 +244,6 @@
           <p class="hero-cont" data-translate="tr-hero-slog">
             Ваш автомобіль - наші клопоти
           </p>
-          <div class="callback-form">
-            <h3 class="text-header" data-translate="tr-callback-txtcb">
-              Замовити дзвінок
-            </h3>
-            <form id="callbackForm">
-              <input
-                type="tel"
-                id="phoneInput"
-                placeholder="+380 XX XXX XX XX"
-                required
-              />
-              <button
-                class="text-header"
-                type="submit"
-                data-translate="tr-callback-btn"
-              >
-                Залишити номер
-              </button>
-            </form>
-            <div
-              id="responseMessage"
-              style="display: none; margin-top: 10px; color: green"
-            ></div>
           </div>
         </div>
       </section>
@@ -638,9 +615,9 @@
           <div class="partner-content">
             <p class="partners-description" data-translate="tr-partner-txt1">
               Запчастини, придбані у нас, ви можете встановити у наших
-              перевірених партнерів по всьому Харкову. <br />
-              Ми співпрацюємо тільки з перевіреними автосервісами, щоб
-              гарантувати якісний монтаж та обслуговування.
+              перевірених партнерів по всьому Харкову. Ми співпрацюємо тільки з
+              перевіреними автосервісами, щоб гарантувати якісний монтаж та
+              обслуговування.
             </p>
             <p class="partners-description" data-translate="tr-partner-txt2">
               Просто скажіть в якому ви районі - ми порадимо найблищого
@@ -673,7 +650,7 @@
               </p>
               <address class="contacts">
                 <a href="tel:+380992273615" class="footer-slogon"
-                  >+38 (099) 227-36-15</a
+                  >+38 (073) 227-36-15</a
                 >
               </address>
             </div>
