--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
           <div class="modal-overlay" id="callbackModal">
             <div class="callback-form">
               <button class="close-btn" id="closeModal">&times;</button>
-              <h3 class="text-header" data-translate="tr-callback-txtcb">
-                Замовити дзвінок
+              <h3 class="text-header" data-translate="tr-callback-txtmobile">
+                Залиште Ваш номер і ми допоможемо з підбором запчастин!
               </h3>
               <form id="callbackForm">
                 <input
