--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/logo.card.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/img/kaskad/hero3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&family=Roboto:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <title>AUTOLINE</title>
+    <title>АС КАСКАД</title>
     <link rel="stylesheet" href="./src/style.css" />
     <link rel="stylesheet" href="./src/js/main.js" />
     <link rel="stylesheet" href="./src/js/language.js" />
@@ -191,7 +191,7 @@
               id="servicesContainer"
             >
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Двигун</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -200,7 +200,7 @@
                 </p>
               </div>
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Ходова частина</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -209,7 +209,7 @@
                 </p>
               </div>
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Електрика</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -218,7 +218,7 @@
                 </p>
               </div>
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Гальмівна система</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -227,7 +227,7 @@
                 </p>
               </div>
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Трансмісія</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -236,7 +236,7 @@
                 </p>
               </div>
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Технічне обслуговування</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -245,7 +245,7 @@
                 </p>
               </div>
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Обслуговуються марки</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -254,7 +254,7 @@
                 </p>
               </div>
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Діагностика</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -263,7 +263,7 @@
                 </p>
               </div>
               <div class="service-card work-card">
-                <img src="./img/kaskad/hero1.jpg" alt="" />
+                <img src="./src/img/kaskad/hero1.jpg" alt="" />
                 <h3>Чіп тюнінг</h3>
                 <p>
                   Комплекс работ по диагностике автомобиля в целом или отдельных
@@ -728,13 +728,13 @@
             <div class="social-div">
               <a href="viber://chat?number=+380502233959" class="viber-button"
                 ><img
-                  src="./img/svg/icon_new - white +purple bg.svg"
+                  src="./src/img/svg/icon_new - white +purple bg.svg"
                   alt="viber-icon"
                 />Наш Viber</a
               >
               <a href="https://t.me/RofLJeKee" class="telegram-button"
                 ><img
-                  src="./img/svg/icons-telegram.svg"
+                  src="./src/img/svg/icons-telegram.svg"
                   alt="telegram-icon"
                 />Наш Telegram</a
               >
